cpp_05/ex02/error
class/PresidentialPardonForm.cpp:4:25: error: out-of-line definition of 'PresidentialPardonForm' does not match any declaration in 'PresidentialPardonForm'
PresidentialPardonForm::PresidentialPardonForm(): name_("anonymous"), isAssigned_(false), signGrade_(150), execGrade_(150) {
                        ^~~~~~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:4:51: error: member initializer 'name_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(): name_("anonymous"), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                  ^~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:4:71: error: member initializer 'isAssigned_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(): name_("anonymous"), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                                      ^~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:4:91: error: member initializer 'signGrade_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(): name_("anonymous"), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                                                          ^~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:4:108: error: member initializer 'execGrade_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(): name_("anonymous"), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                                                                           ^~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:5:50: error: 'name_' is a private member of 'AForm'
        std::cout << "PresidentialPardonForm " << this->name_ << ": " << "default constructor called" << std::endl;
                                                        ^
./includes/AForm.hpp:11:21: note: declared private here
                const std::string name_;
                                  ^
class/PresidentialPardonForm.cpp:9:50: error: 'name_' is a private member of 'AForm'
        std::cout << "PresidentialPardonForm " << this->name_ << ": " << "default destructor called" << std::endl;
                                                        ^
./includes/AForm.hpp:11:21: note: declared private here
                const std::string name_;
                                  ^
class/PresidentialPardonForm.cpp:12:25: error: out-of-line definition of 'PresidentialPardonForm' does not match any declaration in 'PresidentialPardonForm'
PresidentialPardonForm::PresidentialPardonForm(std::string name): name_(name), isAssigned_(false), signGrade_(150), execGrade_(150) {
                        ^~~~~~~~~~~~~~~~~~~~~~
./includes/PresidentialPardonForm.hpp:9:31: note: type of 1st parameter of member declaration does not match definition ('const std::string &' (aka 'const basic_string<char> &') vs 'std::string' (aka 'basic_string<char>'))
        PresidentialPardonForm(const std::string &target);
                                     ^
class/PresidentialPardonForm.cpp:12:67: error: member initializer 'name_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(std::string name): name_(name), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                                  ^~~~~~~~~~~
class/PresidentialPardonForm.cpp:12:80: error: member initializer 'isAssigned_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(std::string name): name_(name), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                                               ^~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:12:100: error: member initializer 'signGrade_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(std::string name): name_(name), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                                                                   ^~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:12:117: error: member initializer 'execGrade_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(std::string name): name_(name), isAssigned_(false), signGrade_(150), execGrade_(150) {
                                                                                                                    ^~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:13:50: error: 'name_' is a private member of 'AForm'
        std::cout << "PresidentialPardonForm " << this->name_ << ": " << "constructor with name called" << std::endl;
                                                        ^
./includes/AForm.hpp:11:21: note: declared private here
                const std::string name_;
                                  ^
class/PresidentialPardonForm.cpp:16:25: error: out-of-line definition of 'PresidentialPardonForm' does not match any declaration in 'PresidentialPardonForm'
PresidentialPardonForm::PresidentialPardonForm(int signGrade, int execGrade): name_("anonymous"), isAssigned_(false), signGrade_(signGrade), execGrade_(execGrade) {
                        ^~~~~~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:16:79: error: member initializer 'name_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(int signGrade, int execGrade): name_("anonymous"), isAssigned_(false), signGrade_(signGrade), execGrade_(execGrade) {
                                                                              ^~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:16:99: error: member initializer 'isAssigned_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(int signGrade, int execGrade): name_("anonymous"), isAssigned_(false), signGrade_(signGrade), execGrade_(execGrade) {
                                                                                                  ^~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:16:119: error: member initializer 'signGrade_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(int signGrade, int execGrade): name_("anonymous"), isAssigned_(false), signGrade_(signGrade), execGrade_(execGrade) {
                                                                                                                      ^~~~~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:16:142: error: member initializer 'execGrade_' does not name a non-static data member or base class
PresidentialPardonForm::PresidentialPardonForm(int signGrade, int execGrade): name_("anonymous"), isAssigned_(false), signGrade_(signGrade), execGrade_(execGrade) {
                                                                                                                                             ^~~~~~~~~~~~~~~~~~~~~
class/PresidentialPardonForm.cpp:17:50: error: 'name_' is a private member of 'AForm'
        std::cout << "PresidentialPardonForm " << this->name_ << ": " << "constructor with sign grade and exec grade called" << std::endl;
                                                        ^
./includes/AForm.hpp:11:21: note: declared private here
                const std::string name_;
                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [Makefile:33: objs/.//class/PresidentialPardonForm.o] Error 1
